Added acl for agent. Implemented workflow for case.

--- a/www/plugins/demo/casemanager/models/casemodel/fields.yaml
+++ b/www/plugins/demo/casemanager/models/casemodel/fields.yaml
@@ -1,6 +1,6 @@
 fields:
     title:
-        label: 'Enter Title'
+        label: Title
         span: auto
         placeholder: 'Enter Title'
         type: text
