--- a/www/plugins/demo/casemanager/models/queuemodel/columns.yaml
+++ b/www/plugins/demo/casemanager/models/queuemodel/columns.yaml
@@ -2,14 +2,17 @@ columns:
     id:
         label: id
         type: number
-    type:
+    name:
+        label: name
+        type: text
+    description:
+        label: description
+        type: text
+    supported_item_type:
         label: type
         type: text
     sort_order:
         label: sort_order
-        type: text
-    script:
-        label: script
         type: text
     created_at:
         label: created_at
@@ -17,15 +20,10 @@ columns:
     updated_at:
         label: updated_at
         type: datetime
-    created_by:
+    created_by[first_name]:
         label: created_by
         type: number
-    updated_by:
+    updated_by[first_name]:
         label: updated_by
         type: number
-    name:
-        label: name
-        type: text
-    description:
-        label: description
-        type: text
+
