--- a/www/plugins/demo/casemanager/models/casemodel/fields.yaml
+++ b/www/plugins/demo/casemanager/models/casemodel/fields.yaml
@@ -1,17 +1,30 @@
 fields:
-    title:
-        label: Title
+    case_number:
+        label: 'Case Number'
         span: auto
-        placeholder: 'Enter Title'
+        required: 1
         type: text
-    description:
-        label: Description
-        size: ''
+        comment: 'Enter Case Number'
+    version:
+        label: Version
         span: auto
-        type: richeditor
+        type: text
+        comment: 'Enter Version'
+    suspect:
+        label: Suspect
+        span: auto
+        type: text
+        comment: 'Enter Suspect'
     priority:
         label: Priority
         nameFrom: name
         descriptionFrom: description
         span: auto
+        required: 1
         type: relation
+        comment: 'Select Priority'
+    comments:
+        label: Comments
+        size: small
+        span: auto
+        type: richeditor
