--- a/www/plugins/demo/casemanager/models/queueitemmodel/fields.yaml
+++ b/www/plugins/demo/casemanager/models/queueitemmodel/fields.yaml
@@ -6,3 +6,11 @@ fields:
         span: auto
         required: 1
         type: relation
+    item_type:
+        label: 'Item Type'
+        span: auto
+        type: text
+    item_id:
+        label: 'Item Id'
+        span: auto
+        type: text
