--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 .idea
-.idea/*
-conf
-conf/*
+./conf
+www/.DS_Store
+www/*.log
+www/bootstrap
+www/config
+www/install_files
+www/modules
+www/storage
+www/vendor
+www/artisan
+www/install.php
+www/install-master
+.idea
 www/themes
+
