Added PluginConnection. Added plugin_id column in all core tables

--- a/www/plugins/demo/core/models/workflowentitiesmodel/fields.yaml
+++ b/www/plugins/demo/core/models/workflowentitiesmodel/fields.yaml
@@ -23,3 +23,10 @@ fields:
         descriptionFrom: description
         span: auto
         type: relation
+    plugin:
+        label: 'Plugin'
+        nameFrom: code
+        descriptionFrom: version
+        span: auto
+        required: 1
+        type: relation
