--- a/www/plugins/demo/core/models/queueitemmodel/fields.yaml
+++ b/www/plugins/demo/core/models/queueitemmodel/fields.yaml
@@ -14,3 +14,10 @@ fields:
         label: 'Item Id'
         span: auto
         type: text
+    plugin:
+        label: 'Plugin'
+        nameFrom: code
+        descriptionFrom: version
+        span: auto
+        required: 1
+        type: relation
