--- a/www/plugins/demo/core/models/queuemodel/fields.yaml
+++ b/www/plugins/demo/core/models/queuemodel/fields.yaml
@@ -17,6 +17,13 @@ fields:
         span: auto
         type: switch
         comment: 'A virtual queue item won''t be associated in database'
+    plugin:
+        label: 'Plugin'
+        nameFrom: code
+        descriptionFrom: version
+        span: auto
+        required: 1
+        type: relation
 tabs:
     fields:
         supported_item_type:
