--- a/www/plugins/demo/core/models/workflowmodel/fields.yaml
+++ b/www/plugins/demo/core/models/workflowmodel/fields.yaml
@@ -20,6 +20,13 @@ fields:
         span: auto
         default: 1
         type: switch
+    plugin:
+        label: 'Plugin'
+        nameFrom: code
+        descriptionFrom: version
+        span: auto
+        required: 1
+        type: relation
 tabs:
     fields:
         definition:
