--- a/www/plugins/demo/core/models/workflowstatemodel/fields.yaml
+++ b/www/plugins/demo/core/models/workflowstatemodel/fields.yaml
@@ -22,3 +22,10 @@ fields:
         span: auto
         default: 1
         type: switch
+    plugin:
+        label: 'Plugin'
+        nameFrom: code
+        descriptionFrom: version
+        span: auto
+        required: 1
+        type: relation
