Added PluginConnection. Added plugin_id column in all core tables

--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -24,3 +24,6 @@
 1.0.9:
     - 'Created table demo_core_inbound_api'
     - builder_table_create_demo_core_inbound_api.php
+1.0.10:
+    - 'Created table demo_core_event_handlers'
+    - builder_table_create_demo_core_event_handlers.php
