--- a/www/plugins/demo/core/models/inboundapimodel/fields.yaml
+++ b/www/plugins/demo/core/models/inboundapimodel/fields.yaml
@@ -3,6 +3,7 @@ fields:
         label: Name
         span: auto
         type: text
+        required: 1
     description:
         label: Description
         size: ''
@@ -21,7 +22,8 @@ tabs:
             label: URL
             span: auto
             type: text
-            tab: 'Tab 1'
+            tab: 'Api Details'
+            required: 1
         method:
             label: Method
             options:
@@ -32,11 +34,13 @@ tabs:
             showSearch: true
             span: auto
             type: dropdown
-            tab: 'Tab 1'
+            tab: 'Api Details'
+            required: 1
         script:
             label: Script
             size: large
             language: php
             span: full
             type: codeeditor
-            tab: 'Tab 1'
+            tab: 'Api Details'
+            required: 1
