--- a/www/plugins/demo/core/controllers/inboundapi/config_reorder.yaml
+++ b/www/plugins/demo/core/controllers/inboundapi/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: InboundApi
-modelClass: Demo\Core\Models\InboundApiModel
+modelClass: Demo\Core\Models\InboundApi
 toolbar:
     buttons: reorder_toolbar
