--- a/www/plugins/demo/core/controllers/eventhandler/config_reorder.yaml
+++ b/www/plugins/demo/core/controllers/eventhandler/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: EventHandler
-modelClass: Demo\Core\Models\EventHandlerModel
+modelClass: Demo\Core\Models\EventHandler
 toolbar:
     buttons: reorder_toolbar
