--- a/www/plugins/demo/core/controllers/inboundapi/config_form.yaml
+++ b/www/plugins/demo/core/controllers/inboundapi/config_form.yaml
@@ -1,6 +1,6 @@
 name: InboundApi
-form: $/demo/core/models/inboundapimodel/fields.yaml
-modelClass: Demo\Core\Models\InboundApiModel
+form: $/demo/core/models/inboundapi/fields.yaml
+modelClass: Demo\Core\Models\InboundApi
 defaultRedirect: demo/core/inboundapi
 create:
     redirect: 'demo/core/inboundapi/update/:id'
