Model Rename Done

--- a/www/plugins/demo/workflow/controllers/queue/config_form.yaml
+++ b/www/plugins/demo/workflow/controllers/queue/config_form.yaml
@@ -1,6 +1,6 @@
 name: Queue
-form: $/demo/workflow/models/queuemodel/fields.yaml
-modelClass: Demo\Workflow\Models\QueueModel
+form: $/demo/workflow/models/queue/fields.yaml
+modelClass: Demo\Workflow\Models\Queue
 defaultRedirect: demo/workflow/queue
 create:
     redirect: 'demo/workflow/queue/update/:id'
