--- a/www/plugins/demo/workflow/controllers/queue/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/queue/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: Queue
-modelClass: Demo\Workflow\Models\QueueModel
+modelClass: Demo\Workflow\Models\Queue
 toolbar:
     buttons: reorder_toolbar
