--- a/www/plugins/demo/workflow/controllers/workflow/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/workflow/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: Workflow
-modelClass: Demo\Workflow\Models\WorkflowModel
+modelClass: Demo\Workflow\Models\Workflow
 toolbar:
     buttons: reorder_toolbar
