--- a/www/plugins/demo/workflow/controllers/workflowstate/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/workflowstate/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: WorkflowState
-modelClass: Demo\Workflow\Models\WorkflowStateModel
+modelClass: Demo\Workflow\Models\WorkflowState
 toolbar:
     buttons: reorder_toolbar
