--- a/www/plugins/demo/workflow/controllers/queueitem/config_form.yaml
+++ b/www/plugins/demo/workflow/controllers/queueitem/config_form.yaml
@@ -1,6 +1,6 @@
 name: QueueItem
-form: $/demo/workflow/models/queueitemmodel/fields.yaml
-modelClass: Demo\Workflow\Models\QueueItemModel
+form: $/demo/workflow/models/queueitem/fields.yaml
+modelClass: Demo\Workflow\Models\QueueItem
 defaultRedirect: demo/workflow/queueitem
 create:
     redirect: 'demo/workflow/queueitem/update/:id'
