--- a/www/plugins/demo/workflow/controllers/workflowtransitions/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/workflowtransitions/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: WorkflowTransitions
-modelClass: Demo\Workflow\Models\WorkflowTransionModel
+modelClass: Demo\Workflow\Models\WorkflowTransition
 toolbar:
     buttons: reorder_toolbar
